Revision history for File::DataClass

          - IO no longer user Exporter to export io constructor function
          - IO::_proxy function now use Sub::Install
          - Added global destruction flag to DEMOLISH subs

0.61.1    2015-05-11 13:12:04
          - Improved test coverage
          - Allow a file name of 0 in IO
          - Default reboolify false. Issue using boolean with Type::Tiny
          - Use boolean to reboolify JSON data when reading. mst++
          - Added IO::sibling and IO::visit
          - Added IO::child
          - Removed HashMerge. Renamed merge to merge_for_update
          - Storage drops locks on destruction
          - Removed Schema::extensions
          - POD updates

0.60.1    2015-04-09 00:09:00
          - Added strict warnings to main module. Kwalitee
          - Better Octalum implementation

0.59.1    2015-04-05 18:56:50
          - Fixed bad format test

0.58.1    2015-04-04 21:14:40
          - Removed VERSION from Schema due to indexing problems

0.57.1    2015-04-04 20:59:17
          - Added Kwakitee badge
          - Refactored cache of cache objects
          - Fixed bug in ::IO::exists
          - Added IO::Handle proxy methods to ::IO
          - Improved test coverage
          - Overload stringify in ::IO uses handle if no name

0.56.1    2015-03-19 14:57:54
          - Deleted _lock_obj from ::IO. Unusable misfeature
          - Fixed IO::seek
          - Added IO::tell
          - IO::stat returns undef if no name or file handle
          - Will stat an open file handle
          - Added explicite ::IO bool overload
          - Added IO::hexdigest. IO::digest now returns an object ref
          - Added result source types

0.55.1    2015-02-05 00:03:07
          - Replaced MooX::ClassStash with Subclass::Of and a factory pattern
          - Changed default perms to 640

0.54.1    2014-12-19 22:52:50
          - Updated prereqs. Slaven is testing with modules from the back